# oversight

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: opsec.yml  pages.yml  source-style.yml  tests.yml
docs/: EMBEDDING.md  OUTLOOK.md  REGISTRY_DEPLOYMENT.md  REGISTRY_V1_STABILITY.md  ROADMAP.md  SPEC.md  V05_REKOR_PLAN.md
docs/spec/: registry-v1.md
examples/: live_demo_v2.py
integrations/: perseus_canarykeeper.py
integrations/outlook/: README.md  index.html
oversight-rust/: Cargo.toml
oversight-rust/oversight-cli/src/: main.rs
oversight-rust/oversight-container/src/: lib.rs
oversight-rust/oversight-crypto/: Cargo.toml
oversight-rust/oversight-crypto/examples/: hybrid_kem_cli.rs
oversight-rust/oversight-crypto/src/: lib.rs
oversight-rust/oversight-formats/: Cargo.toml
oversight-rust/oversight-formats/src/: docx.rs  image.rs  lib.rs  pdf.rs
oversight-rust/oversight-manifest/src/: lib.rs
oversight-rust/oversight-policy/src/: lib.rs
oversight-rust/oversight-registry/: Cargo.toml
oversight-rust/oversight-registry/src/: auth.rs  db.rs  error.rs  main.rs  models.rs
oversight-rust/oversight-registry/src/routes/: attribute.rs  beacon.rs  dns_event.rs  evidence.rs  health.rs  mod.rs  query.rs  register.rs  semantic.rs  tlog.rs  well_known.rs
oversight-rust/oversight-rekor/examples/: conformance_helper.rs
oversight-rust/oversight-rekor/src/: lib.rs
oversight-rust/oversight-semantic/examples/: debug.rs
oversight-rust/oversight-semantic/src/: lib.rs
oversight-rust/oversight-tlog/src/: lib.rs
oversight-rust/tests/: conformance_cross_lang.sh  conformance_hybrid_kem.py  conformance_rekor.sh
oversight_core/: container.py  crypto.py  jcs.py  manifest.py  rekor.py  tlog.py
registry/: server.py
scripts/: check_source_comments.py
tests/: test_e2e.py  test_e2e_v2.py  test_gui_hardening_unit.py  test_jcs_canonical_unit.py  test_l3_policy_unit.py  test_manifest_p256_parse_unit.py  test_operator_auth_unit.py  test_policy_unit.py  test_pq.py  test_registry_conformance.py  test_registry_unit.py  test_rekor_backcompat.py  test_rekor_e2e.py  test_rekor_unit.py  test_siem_unit.py  test_source_comment_style.py  test_text_format_unit.py  test_tlog_unit.py  test_xff_spoof_unit.py
tools/: gen_hw_p256_sample.py  gen_hybrid_sample.py
