[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oversight-protocol"
version = "0.4.11"
description = "Open protocol for cryptographic data provenance, recipient attribution, and leak detection."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Zion Boggan", email = "zionboggan@gmail.com"},
]
keywords = ["watermark", "provenance", "attribution", "leak-detection", "cryptography", "post-quantum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=46.0.7",
    "pynacl>=1.6.2",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
registry = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.26",
]
formats = [
    "Pillow>=12.2.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pypdf>=6.10.2",
    "python-docx>=1.1.0",
    "imagehash>=4.3.1",
]
dns = [
    "dnslib>=0.9.25",
]
all = ["oversight-protocol[registry,formats,dns]"]

[project.scripts]
oversight = "cli.oversight_rich:main"
oversight-gui = "cli.gui:main"

[project.urls]
Homepage = "https://oversight-protocol.github.io/oversight/"
Repository = "https://github.com/oversight-protocol/oversight"
Documentation = "https://oversight-protocol.github.io/oversight/docs/"
Issues = "https://github.com/oversight-protocol/oversight/issues"

[tool.setuptools.packages.find]
include = ["oversight_core*", "cli*", "registry*", "oversight_dns*"]
