[workspace]
resolver = "2"
members = [
    "oversight-crypto",
    "oversight-container",
    "oversight-manifest",
    "oversight-watermark",
    "oversight-tlog",
    "oversight-policy",
    "oversight-semantic",
    "oversight-formats",
    "oversight-cli",
    "oversight-rekor",
    "oversight-registry",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/oversight-protocol/oversight"
authors = ["Oversight contributors"]

[workspace.dependencies]
# Cryptography — all RustCrypto (pure Rust, memory-safe, audited where noted).
# x25519-dalek: battle-tested, used by signal-protocol, age, TLS 1.3 impls.
# ed25519-dalek: same. Both have been independently audited.
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
# p256: NIST P-256 ECDH for hardware-backed recipients (PIV, PKCS#11).
# Features: `ecdh` exposes diffie_hellman, `arithmetic` exposes scalar/point ops.
p256 = { version = "0.13", features = ["ecdh", "arithmetic"] }
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
hkdf = "0.12"
sha2 = "0.10"
rand_core = "0.6.2"
# ML-KEM-768 (FIPS 203) for the OSGT-HYBRID-v1 key-encapsulation half.
# Pure Rust, RustCrypto-published, no C build (liboqs would need cmake).
ml-kem = "0.3"

# Serialization / encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
zeroize = { version = "1", features = ["zeroize_derive"] }

# CLI / io / time
clap = { version = "4", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# For canonical JSON
serde_jcs = "0.1"

# Constant-time primitives (token comparison, Choice-based bool handling).
# Already a transitive dep via ed25519-dalek / chacha20poly1305; declared
# explicitly so auth code can rely on it without going through another crate.
subtle = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
